2008-05-02  Mark Ellis <mark@mpellis.org.uk>

	* instructions for changing log level
	* fix make dist
	* improve README
	* change hal-synce-legacy to hal-synce-serial

2008-04-30  Mark Ellis <mark@mpellis.org.uk>

	* exit gracefully after receiving SIGTERM, which hal sends
	  when device disconnects
	* make log level configurable in scripts, tidy logging

2008-04-25  Mark Ellis <mark@mpellis.org.uk>

	* added some bluetooth scripts, updated README

2008-04-14  Mark Ellis <mark@mpellis.org.uk>

	* fixed rndis dhcp connection
	* make sure dccm logs everything to syslog
	* become an addon when device is added instead of a callout,
	  prevents the device being advertised until properly set up

2008-04-10  Mark Ellis <mark@mpellis.org.uk>

	* more FreeBSD fixes, thanks to Ilya Bakulin

2008-04-01  Mark Ellis <mark@mpellis.org.uk>

	* cleaned up build system, should help *bsd'ers
	* removed libsynce and librapi2 patches, these have been committed
	* added patch for sync-engine

2008-03-28  Mark Ellis <mark@mpellis.org.uk>

	* replaced rndis callout script with python script to
	  first attempt dhcp configuration, then fall back to
	  static config

2008-03-25  Mark Ellis <mark@mpellis.org.uk>

	* removed unneeded linux/if.h include from utils.c for
	  cross platform compatability

2008-03-20  Mark Ellis <mark@mpellis.org.uk>

	* 10-synce.fdi - added freebsd ucom rule

2008-03-16  Mark Ellis <mark@mpellis.org.uk>

	* don't unref incoming client conn to WM5/6 device in
	  main.c client_connected_cb()

2008-02-21  Mark Ellis <mark@mpellis.org.uk>

	* 10-synce.fdi - add pda.platform property for usb-rndis-*

2008-02-15  Mark Ellis <mark@mpellis.org.uk>

	* correct typo for synce-device.h in src/Makefile.am
	* added 10-synce.fdi, synce-device-signals-marshal.list,
	  synce-device.xml to EXTRA_DIST

2008-02-13  Mark Ellis <mark@mpellis.org.uk>

	* call gnet_init()

2008-02-12  Mark Ellis <mark@mpellis.org.uk>

	* tidy debugging and utils
